--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
           <h2>Te brindamos un servicio integral.</h2>
 
           <div class="btns">
-            <a href="#menu" class="btn-menu animated fadeInUp scrollto">Cumpleaños de 15</a>
-            <a href="#book-a-table" class="btn-book animated fadeInUp scrollto">Envíanos un Mail</a>
+            <a href="#" class="btn-menu animated fadeInUp scrollto">Cumpleaños de 15</a>
           </div>
         </div>
         <div class="col-lg-4 d-flex align-items-center justify-content-center position-relative" data-aos="zoom-in" data-aos-delay="200">
